[gd_scene load_steps=3 format=3 uid="uid://c3xnayr5vn8w3"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]
[ext_resource type="PackedScene" uid="uid://d8xm3yr5vn9w4" path="res://scenes/ui/LevelUpMenu.tscn" id="2_menu"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="LevelLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Level: 1"

[node name="XPBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 60.0
offset_right = 320.0
offset_bottom = 80.0
max_value = 100.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 90.0
offset_right = 320.0
offset_bottom = 110.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="LevelUpMenu" parent="." instance=ExtResource("2_menu")]
